syntax = "proto3";

package api.ai_model.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/ai_model/v1;v1";

// AI 智能模型服务，提供个性化推荐、图像分析、NLP 情感识别及风控评分等机器学习能力。
service AIModel {
  // --- 智能推荐 ---

  // 获取千人千面的个性化商品推荐清单。
  rpc GetProductRecommendations(GetProductRecommendationsRequest) returns (GetProductRecommendationsResponse);

  // 查询与特定商品在属性或行为上相似的相关商品。
  rpc GetRelatedProducts(GetRelatedProductsRequest) returns (GetRelatedProductsResponse);

  // 生成个性化首页或发现页内容流。
  rpc GetPersonalizedFeed(GetPersonalizedFeedRequest) returns (GetPersonalizedFeedResponse);

  // --- 计算机视觉 ---

  // 深度识别图片内容（分类、品牌识别及标签提取）。
  rpc RecognizeImageContent(RecognizeImageContentRequest) returns (RecognizeImageContentResponse);

  // 根据图片特征搜索库中外观相似的商品。
  rpc SearchImageByImage(SearchImageByImageRequest) returns (SearchImageByImageResponse);

  // --- 自然语言处理 ---

  // 分析用户评价的文本，提取正负面情感倾向。
  rpc AnalyzeReviewSentiment(AnalyzeReviewSentimentRequest) returns (AnalyzeReviewSentimentResponse);

  // 从长文本中自动提取核心业务关键词。
  rpc ExtractKeywordsFromText(ExtractKeywordsFromTextRequest) returns (ExtractKeywordsFromTextResponse);

  // 对冗长描述或文章进行智能摘要。
  rpc SummarizeText(SummarizeTextRequest) returns (SummarizeTextResponse);

  // --- 风险评估 ---

  // 针对交易或账号行为计算多维度的欺诈概率评分。
  rpc GetFraudScore(GetFraudScoreRequest) returns (GetFraudScoreResponse);

  // --- 模型运维 ---

  // 将训练好的新版本模型上线。
  rpc DeployModel(DeployModelRequest) returns (DeployModelResponse);

  // 监控模型实例运行健康度及版本信息。
  rpc GetModelStatus(GetModelStatusRequest) returns (GetModelStatusResponse);

  // 触发模型的异步增量或全量重新训练任务。
  rpc RetrainModel(RetrainModelRequest) returns (RetrainModelResponse);
}

// 推荐查询请求。
message GetProductRecommendationsRequest {
  // 目标用户 ID。
  uint64 user_id = 1;
  // 需要推荐的数量。
  int32 count = 2;
  // 过滤掉已购买或已忽略的 ID。
  repeated uint64 exclude_product_ids = 3;
  // 触发场景 (homepage, cart)。
  optional string context_page = 4;
  // 参照物 ID（用于关联推荐）。
  optional uint64 current_product_id = 5;
}

// 推荐结果。
message GetProductRecommendationsResponse {
  // 推荐条目列表。
  repeated ProductRecommendation recommendations = 1;
}

// 推荐条目详情。
message ProductRecommendation {
  // 商品 ID。
  uint64 product_id = 1;
  // 算法置信度分数。
  double score = 2;
  // 推荐理由标记（如 "因为你买过..."）。
  optional string reason = 3;
}

// 相关商品请求。
message GetRelatedProductsRequest {
  // 原商品 ID。
  uint64 product_id = 1;
  // 数量。
  int32 count = 2;
}

// 相关商品响应。
message GetRelatedProductsResponse {
  // 相似/相关商品列表。
  repeated ProductRecommendation related_products = 1;
}

// 发现流请求。
message GetPersonalizedFeedRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 数量。
  int32 page_size = 2;
  // 翻页索引。
  int32 page_token = 3;
}

// 发现流响应。
message GetPersonalizedFeedResponse {
  // Feed 流条目。
  repeated FeedItem feed_items = 1;
  // 总笔数。
  int32 total_count = 2;
  // 令牌。
  int32 next_page_token = 3;
}

// Feed 单元项。
message FeedItem {
  // 项目种类 (product, news, ad)。
  string item_type = 1;
  // 业务 ID。
  string item_id = 2;
  // 展示标题。
  string title = 3;
  // 封面图。
  string image_url = 4;
  // 深度链接 URL。
  string target_url = 5;
  // 排序权重。
  double score = 6;
}

// 图像识别请求。
message RecognizeImageContentRequest {
  // 外部图片地址。
  string image_url = 1;
  // 图片原始字节流。
  bytes image_data = 2;
}

// 识别结果。
message RecognizeImageContentResponse {
  // 特征标签。
  repeated ImageTag tags = 1;
  // 所属分类。
  repeated ImageCategory categories = 2;
  // 提取的主色调。
  optional string dominant_color = 3;
}

// 图片标签。
message ImageTag {
  // 标签名。
  string name = 1;
  // 算法准确度。
  double confidence = 2;
}

// 类别标签。
message ImageCategory {
  // 分类名。
  string name = 1;
  // 准确度分数。
  double confidence = 2;
}

// 以图搜图请求。
message SearchImageByImageRequest {
  // 搜索图 URL。
  string image_url = 1;
  // 搜索图字节。
  bytes image_data = 2;
  // 召回数量。
  int32 count = 3;
}

// 搜图响应。
message SearchImageByImageResponse {
  // 检索到的相似产品。
  repeated ProductSearchResult results = 1;
}

// 检索结果项。
message ProductSearchResult {
  // 商品 ID。
  uint64 product_id = 1;
  // 视觉相似度评分。
  double similarity_score = 2;
}

// 评论分析请求。
message AnalyzeReviewSentimentRequest {
  // 待分析文本。
  string review_text = 1;
}

// 情感分析结果。
message AnalyzeReviewSentimentResponse {
  // 情感分类标记。
  Sentiment sentiment = 1;
  // 分值（如 0-1）。
  double score = 2;
  // 分析理由说明。
  optional string explanation = 3;
}

// 情感类别。
enum Sentiment {
  SENTIMENT_UNSPECIFIED = 0;
  SENTIMENT_POSITIVE = 1; // 正面/满意
  SENTIMENT_NEUTRAL = 2; // 中性/一般
  SENTIMENT_NEGATIVE = 3; // 负面/差评
}

// 关键词提取请求。
message ExtractKeywordsFromTextRequest {
  // 原始内容。
  string text = 1;
  // 期望提取数量。
  int32 count = 2;
}

// 关键词列表响应。
message ExtractKeywordsFromTextResponse {
  // 提取出的核心词序列。
  repeated string keywords = 1;
}

// 文本摘要请求。
message SummarizeTextRequest {
  // 冗长文本。
  string text = 1;
  // 摘要长度约束。
  int32 summary_length = 2;
}

// 摘要结果。
message SummarizeTextResponse {
  // 精简后的摘要。
  string summary = 1;
}

// 欺诈评分请求。
message GetFraudScoreRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 订单 ID。
  uint64 order_id = 2;
  // 涉及金额。
  double transaction_amount = 3;
  // 请求 IP 地址。
  string ip_address = 4;
  // 设备指纹。
  string device_info = 5;
}

// 评分结果。
message GetFraudScoreResponse {
  // 风险得分 (0-1)。
  double fraud_score = 1;
  // 是否判定为风险。
  bool is_fraudulent = 2;
  // 判定触发的规则原因。
  repeated string reasons = 3;
}

// 模型部署请求。
message DeployModelRequest {
  // 模型名。
  string model_name = 1;
  // 发布版本号。
  string model_version = 2;
  // 权重文件存储位置。
  string model_uri = 3;
  // 部署参数。
  map<string, string> metadata = 4;
}

// 部署响应。
message DeployModelResponse {
  // 部署任务 ID。
  string deployment_id = 1;
  // 当前执行状态。
  string status = 2;
}

// 状态查询。
message GetModelStatusRequest {
  // 部署任务 ID。
  string deployment_id = 1;
}

// 状态详情。
message GetModelStatusResponse {
  // 任务 ID。
  string deployment_id = 1;
  // 正在运行的模型。
  string model_name = 2;
  // 当前版本。
  string model_version = 3;
  // 运行时健康状态。
  string status = 4;
  // 部署完成日期。
  google.protobuf.Timestamp deployed_at = 5;
  // 运行错误提示。
  optional string error_message = 6;
}

// 训练触发。
message RetrainModelRequest {
  // 模型 ID。
  string model_name = 1;
  // 训练源数据集路径。
  optional string dataset_uri = 2;
  // 超参数。
  map<string, string> training_params = 3;
}

// 训练响应。
message RetrainModelResponse {
  // 异步训练作业 ID。
  string training_job_id = 1;
  // 任务启动状态。
  string status = 2;
}
