syntax = "proto3";

package api.fraud_detection.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/fraud_detection/v1;v1";

// FraudDetection Service
service FraudDetection {
    // 提交交易进行欺诈评估
    rpc EvaluateTransaction(EvaluateTransactionRequest) returns (EvaluateTransactionResponse);

    // 获取欺诈评估的状态
    rpc GetEvaluationStatus(GetEvaluationStatusRequest) returns (GetEvaluationStatusResponse);

    // Report a suspected fraudulent activity
    rpc ReportFraud(ReportFraudRequest) returns (ReportFraudResponse);
}

// Represents a fraud evaluation result
message FraudEvaluation {
    string transaction_id = 1;
    string user_id = 2;
    string status = 3; // e.g., PENDING, APPROVED, REJECTED, REVIEW
    double score = 4; // Fraud risk score
    repeated string reasons = 5; // 评分/状态的原因
    google.protobuf.Timestamp evaluated_at = 6;
}

// 欺诈评估请求
message EvaluateTransactionRequest {
    string transaction_id = 1;
    string user_id = 2;
    double amount = 3;
    string currency = 4;
    string payment_method_type = 5;
    string ip_address = 6;
    string user_agent = 7;
    map<string, string> additional_data = 8;
}

// 欺诈评估响应
message EvaluateTransactionResponse {
    FraudEvaluation evaluation = 1;
}

// 获取欺诈评估状态请求
message GetEvaluationStatusRequest {
    string transaction_id = 1;
}

// 获取欺诈评估状态响应
message GetEvaluationStatusResponse {
    FraudEvaluation evaluation = 1;
}

// 报告欺诈请求
message ReportFraudRequest {
    string transaction_id = 1;
    string user_id = 2;
    string report_reason = 3;
    map<string, string> evidence = 4;
}

// 报告欺诈响应
message ReportFraudResponse {
    bool success = 1;
    string message = 2;
}
